# personal-website

./: .dockerignore  .gitignore  .sesskey  CLAUDE.md  DESIGN.md  Dockerfile  IMPLEMENTATION.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
documentation/: DESIGN.md  IMPLEMENTATION.md  PRD.md
src/: __init__.py
src/main_app/: __init__.py  app.py  components.py
src/main_app/posts/: getting-started-with-fasthtml.md  python-development-best-practices.md  welcome-to-my-blog.md
src/main_app/routes/: __init__.py  about.py  home.py  posts.py  tags.py
src/main_app/static/css/: custom.css
src/main_app/static/js/: dark-mode.js
src/main_app/templates/: base.html
src/main_app/utils/: __init__.py  content.py
tests/: __init__.py  test_app.py  test_content.py
